--- a/views/about.ejs
+++ b/views/about.ejs
@@ -26,7 +26,7 @@
     <p>Over the summer, I worked as a Teaching Assistant for Software Development 2. This experience further deepened my understanding of software development and also provided me with an opportunity to improve my skills in explaining complex topics in an understandable way. </p>
 
     <h2>More About Me</h2>
-    <p>When I'm not studying or working, I enjoy spending my time on various personal coding projects, further expanding my knowledge and skills in the field of software development.</p>
+    <p>When I'm not studying or working, I enjoy spending my time skating, listening to music, and working out.</p>
   </main>
 
   <script src="/js/main.js"></script>
