--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -24,7 +24,8 @@
 
     <div class="project">
       <h2>AI Chatbot</h2>
-      <p>Developed an AI chatbot in Python using neural networks and natural language processing techniques. Implemented text data preprocessing and analysis with NLTK to enable the chatbot to understand and generate human-like responses.</p>
+      <p>Developed an AI chatbot using Python, incorporating neural networks and natural language processing techniques. By leveraging neural networks, specifically deep learning models, the chatbot is capable of learning patterns and relationships in input data, enabling it to understand user queries and generate human-like responses. Integrating natural language processing techniques allows the chatbot to effectively process and analyze natural language input, enhancing its ability to comprehend user intent and provide meaningful and contextually relevant answers.
+      </p>
     </div>
 
     <div class="project">
