--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -18,19 +18,33 @@
     <h1>Personal Projects</h1>
 
     <div class="project">
-      <h2>Dynamic Social Media Website</h2>
+      <h2>
+        AI Chatbot
+        <a href="https://github.com/MKempler/AIChatbot">
+          <img src="/assets/github-mark.png" alt="GitHub" class="github-logo">
+        </a>
+      </h2>
+      <p>Developed an AI chatbot using Python, incorporating neural networks and natural language processing techniques. By leveraging neural networks, specifically deep learning models, the chatbot is capable of learning patterns and relationships in input data, enabling it to understand user queries and generate human-like responses. Integrating natural language processing techniques allows the chatbot to effectively process and analyze natural language input, enhancing its ability to comprehend user intent and provide meaningful and contextually relevant answers.</p>
+    </div>
+
+    <div class="project">
+      <h2>
+        Dynamic Social Media Website
+        <a href="https://github.com/MKempler/SocialMediaWebsite">
+          <img src="/assets/github-mark.png" alt="GitHub" class="github-logo">
+        </a>
+      </h2>
       <p>Created a dynamic social media website adhering to RESTful principles. Built the front-end using HTML and CSS, while leveraging JavaScript and Node.js with the Express framework for the back-end development. Utilized Postgres as the database system.</p>
     </div>
 
     <div class="project">
-      <h2>AI Chatbot</h2>
-      <p>Developed an AI chatbot using Python, incorporating neural networks and natural language processing techniques. By leveraging neural networks, specifically deep learning models, the chatbot is capable of learning patterns and relationships in input data, enabling it to understand user queries and generate human-like responses. Integrating natural language processing techniques allows the chatbot to effectively process and analyze natural language input, enhancing its ability to comprehend user intent and provide meaningful and contextually relevant answers.
-      </p>
-    </div>
-
-    <div class="project">
-      <h2>Real-time Weather App</h2>
-      <p>Developed a weather app using Swift that utilizes API calls to fetch real-time weather data. Implemented features such as location-based forecasts, intuitive user interfaces, and seamless data retrieval from reliable sources.</p>
+      <h2>
+        Real-time Weather App
+        <a href="https://github.com/MKempler/Weather-Data-Fetcher">
+          <img src="/assets/github-mark.png" alt="GitHub" class="github-logo">
+        </a>
+      </h2>
+      <p>Developed a weather data fetching program, utilizing API calls to fetch real-time weather data from OpenWeatherMap. Implemented location-based forecasts, an intuitive gui using Tkinter, and seamless data retrieval.</p>
     </div>
   </main>
 </body>
