--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -64,9 +64,11 @@ section h2 {
   margin-bottom: 1em;
 }
 
-.project h3, .project p {
+.project h3,
+.project p {
   margin: 0;
   padding: 0;
+  font-size: 1em; 
 }
 
 #skills ul {
@@ -80,22 +82,36 @@ section h2 {
   margin-bottom: 1em;
 }
 
-/* CSS styles for the contact page */
-.contact-info {
+/* Additional Styles for Contact Page */
+
+main.center-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 30vh;
+}
+
+p {
   font-size: 1.2em;
-  margin-top: 20px;
+  margin-bottom: 2em;
 }
 
-.contact-info li {
-  margin-bottom: 10px;
+ul li {
+  font-size: 1.1em;
+  margin-bottom: 1em;
 }
 
-.contact-info a {
+a {
   color: #000000;
   text-decoration: none;
 }
 
-.contact-info a:hover {
+a:hover {
   text-decoration: underline;
 }
-
+.github-logo {
+  width: 25px;
+  height: 25px;
+  vertical-align: middle;
+}
