--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Max Kempler</title>
+  <title>Contact | Max Kempler</title>
   <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
@@ -13,23 +12,29 @@
     <a href="/contact">Contact</a>
     <a href="/projects">Personal Projects</a>
   </nav>
-  <h1>Contact Me</h1>
-  <p>
-    You can reach out to me through the following channels:
-  </p>
-  <ul>
-    <li>
-      Email: <a href="mailto:maxkempler@gmail.com">maxkempler@gmail.com</a>
-    </li>
-    <li>
-      Phone: <a href="tel:+12073108330">207-310-8330</a>
-    </li>
-    <li>
-      LinkedIn: <a href="https://www.linkedin.com/in/max-kempler/">Max Kempler</a>
-    </li>
-    <li>
-      GitHub: <a href="https://github.com/MKempler">MKempler</a>
-    </li>
-  </ul>
+
+  <header>
+    <h1>Contact Me</h1>
+  </header>
+
+  <main class="center-content">
+    <p>
+      You can reach out to me through the following channels:
+    </p>
+    <ul>
+      <li>
+        Email: <a href="mailto:maxkempler@gmail.com">maxkempler@gmail.com</a>
+      </li>
+      <li>
+        Phone: <a href="tel:+12073108330">207-310-8330</a>
+      </li>
+      <li>
+        LinkedIn: <a href="https://www.linkedin.com/in/max-kempler/">Max Kempler</a>
+      </li>
+      <li>
+        GitHub: <a href="https://github.com/MKempler">MKempler</a>
+      </li>
+    </ul>
+  </main>
 </body>
 </html>
