--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -22,19 +22,20 @@
       You can reach out to me through the following channels:
     </p>
     <ul>
-      <li>
+      <li class="contact-method">
         Email: <a href="mailto:maxkempler@gmail.com">maxkempler@gmail.com</a>
       </li>
-      <li>
+      <li class="contact-method">
         Phone: <a href="tel:+12073108330">207-310-8330</a>
       </li>
-      <li>
+      <li class="contact-method">
         LinkedIn: <a href="https://www.linkedin.com/in/max-kempler/">Max Kempler</a>
       </li>
-      <li>
+      <li class="contact-method">
         GitHub: <a href="https://github.com/MKempler">MKempler</a>
       </li>
     </ul>
   </main>
+  
 </body>
 </html>
