--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -4,14 +4,6 @@
   <meta charset="UTF-8">
   <title>Max Kempler</title>
   <link rel="stylesheet" type="text/css" href="/css/styles.css">
-  <style>
-    .center {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-  </style>
 </head>
 <body>
   <nav>
@@ -23,7 +15,7 @@
   </nav>
 
   <div class="center">
-    <embed src="/assets/Max-Kempler-Resume.pdf" width="800" height="750" type="application/pdf">
+    <embed src="/assets/Max-Kempler-Resume.pdf" width="100%" height="100%" type="application/pdf">
   </div>
 </body>
 </html>
