--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,7 +28,8 @@ header {
   border-bottom: 2px solid #000000;
 }
 
-header h1, header h2 {
+header h1,
+header h2 {
   color: #000000;
 }
 
@@ -56,7 +57,8 @@ section h2 {
   font-size: 2em;
 }
 
-.project, #skills li {
+.project,
+#skills li {
   background-color: #F8F8F8;
   border: 1px solid #E0E0E0;
   border-radius: 5px;
@@ -68,7 +70,7 @@ section h2 {
 .project p {
   margin: 0;
   padding: 0;
-  font-size: 1em; 
+  font-size: 1em;
 }
 
 #skills ul {
@@ -83,13 +85,6 @@ section h2 {
 }
 
 /* Additional Styles for Contact Page */
-
-.project h3,
-.project p {
-  margin: 0;
-  padding: 0;
-  font-size: 1em; 
-}
 
 ul {
   list-style-type: none;
@@ -121,4 +116,11 @@ a:hover {
   width: 25px;
   height: 25px;
   vertical-align: middle;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
