--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -2,28 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Max Kempler</title>
   <link rel="stylesheet" type="text/css" href="/css/styles.css">
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-    }
-    
-    .center {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .embed-container {
-      max-width: 100%;
-      height: auto;
-      display: block;
-    }
-  </style>
 </head>
 <body>
   <nav>
@@ -35,7 +15,7 @@
   </nav>
 
   <div class="center">
-    <embed class="embed-container" src="/assets/Max-Kempler-Resume.pdf" type="application/pdf">
+    <embed src="/assets/Max-Kempler-Resume.pdf" width="100%" height="100%" type="application/pdf">
   </div>
 </body>
 </html>
