--- a/views/about.ejs
+++ b/views/about.ejs
@@ -20,7 +20,7 @@
   <main>
     <h2>Education</h2>
     <p>I am currently a junior at Marist College pursuing a degree in Computer Science, with a concentration in Software Development. </p>
-    <P>Courses taken: Intro to Programming(Python), Software Development 1(Java), Software Development 2(Javascript), Database Management, Software Systems and Analysis, Data Communications, Internetworking, System Design</P>
+    <P>Courses: Intro to Programming(Python), Software Development 1(Java), Software Development 2(Javascript), Database Management, Software Systems and Analysis, Data Communications, Internetworking, System Design.</P>
 
     <h2>Experience</h2>
     <p>I currently work as a Student Web Programmer with Marist's IT department. This role has provided me with hands-on experience and has allowed me to apply the theoretical knowledge I've gained from my studies in a practical setting. </p>
