--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Max Kempler - Personal Projects</title>
+  <title>Projects | Max Kempler</title>
   <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
@@ -13,9 +12,10 @@
     <a href="/contact">Contact</a>
     <a href="/projects">Personal Projects</a>
   </nav>
-  
-  <main>
+
+  <header>
     <h1>Personal Projects</h1>
+  </header>
 
     <div class="project">
       <h2>
