--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Projects | Max Kempler</title>
+  <meta charset="UTF-8">
+  <title>Max Kempler - Personal Projects</title>
   <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
@@ -12,7 +13,7 @@
     <a href="/contact">Contact</a>
     <a href="/projects">Personal Projects</a>
   </nav>
-
+  
   <header>
     <h1>Personal Projects</h1>
   </header>
