--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -14,9 +14,8 @@
     <a href="/projects">Personal Projects</a>
   </nav>
   
-  <header>
+  <main>
     <h1>Personal Projects</h1>
-  </header>
 
     <div class="project">
       <h2>
