--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -14,8 +14,12 @@
     <a href="/projects">Personal Projects</a>
   </nav>
   
-  <main>
+  <header>
     <h1>Personal Projects</h1>
+  </header>
+
+
+  <main>
 
     <div class="project">
       <h2>
