--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,63 +1,319 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Max Kempler</title>
-  <link rel="stylesheet" type="text/css" href="/css/styles.css">
-</head>
-<body>
-  <nav>
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/resume">Resume</a>
-    <a href="/contact">Contact</a>
-    <a href="/projects">Personal Projects</a>
-  </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Max Kempler</title>
+
+    <link rel="stylesheet" href="css/styles.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="header">
+      <div class="header__content">
+        <div class="header__logo-container">
+          <div class="header__logo-img-cont">
+            <img
+              src="./assets/max-kempler.png"
+                  
+              class="header__logo-img"
+              
+
+              
+            />
+            
+          </div>
+          <span class="header__logo-sub">Max Kempler</span>
+        </div>
+        <div class="header__main">
+          <ul class="header__links">
+            <li class="header__link-wrapper">
+              <a href="/" class="header__link"> Home </a>
+            </li>
+            <li class="header__link-wrapper">
+              <a href="./#about" class="header__link">About </a>
+            </li>
+            <li class="header__link-wrapper">
+              <a href="./#projects" class="header__link">
+                Projects
+              </a>
+            </li>
+            <li class="header__link-wrapper">
+              <a href="./#contact" class="header__link"> Contact </a>
+            </li>
+          </ul>
+        
+      <div class="header__sm-menu">
+        <div class="header__sm-menu-content">
+          <ul class="header__sm-menu-links">
+            <li class="header__sm-menu-link">
+              <a href="./index.html"> Home </a>
+            </li>
+
+            <li class="header__sm-menu-link">
+              <a href="./index.html#about"> About </a>
+            </li>
+
+            <li class="header__sm-menu-link">
+              <a href="./index.html#projects"> Projects </a>
+            </li>
+
+            <li class="header__sm-menu-link">
+              <a href="./index.html#contact"> Contact </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <section class="home-hero">
+      <div class="home-hero__content">
+        <h1 class="heading-primary">Hey, My name is Max Kempler</h1>
+        <div class="home-hero__info">
+          <p class="text-primary">
+            I am a Computer Science student at Marist College. I am also currently working as a Software Engineer Intern at the Center for Internet Security.
+          </p>
+        </div>
+        <div class="home-hero__cta">
+          <a href="./#projects" class="btn btn--bg">Projects</a>
+        </div>
+      </div>
+      <div class="home-hero__socials">
+        <div class="home-hero__social">
+          <a href="https://www.linkedin.com/in/max-kempler/" class="home-hero__social-icon-link">
+            <img
+              src="./assets/linkedin-ico.png"
+              alt="icon"
+              class="home-hero__social-icon"
+            />
+          </a>
+        </div>
+        <div class="home-hero__social">
+          <a href="https://github.com/MKempler" class="home-hero__social-icon-link">
+            <img
+              src="./assets/github-mark.png"
+              alt="icon"
+              class="home-hero__social-icon"
+            />
+          </a>
+        </div>
+      
+          </a>
+        </div>
+      </div>
+      <div class="home-hero__mouse-scroll-cont">
+        <div class="mouse"></div>
+      </div>
+    </section>
+    <section id="about" class="about sec-pad">
+      <div class="main-container">
+        <h2 class="heading heading-sec heading-sec__mb-med">
+          <span class="heading-sec__main">About Me</span>
+          <span class="heading-sec__sub">
+            Here you will find more information about me, what I do, and my current skills
+          </span>
+        </h2>
+        <div class="about__content">
+          <div class="about__content-main">
+            <h3 class="about__content-title">Get to know me!</h3>
+            <div class="about__content-details">
+              <p class="about__content-details-para">
+                Hey! It's
+                <strong>Max Kempler</strong>
+                and I'm a <strong> Software Engineer Intern </strong> at CIS.  I am originally from Maine and currently 
+                attend Marist College in Poughkeepsie, NY. In the past, I've worked as DevOps support in the Marist College IT department,
+                 where I managed servers in a Linux environment and created scripts to automate processes for operations. I have also worked as a Teaching Assistant for Software Development 2,
+                  which allowed me to become extremely proficient in JavaScript as I helped explain complex software development topics to advanced high school students.
+        
+              </p>
+              <p class="about__content-details-para">
+              </p>
+            </div>
+            <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
+              >Contact</a
+            >
+          </div>
+          <div class="about__content-skills">
+            <h3 class="about__content-title">My Skills</h3>
+            <div class="skills">
+              <div class="skills__skill">HTML</div>
+              <div class="skills__skill">CSS</div>
+              <div class="skills__skill">JavaScript</div>
+              <div class="skills__skill">Java</div>
+              <div class="skills__skill">React</div>
+              <div class="skills__skill">GIT</div>
+              <div class="skills__skill">SQL</div>
+              <div class="skills__skill">Agile / Scrum</div>
+              <div class="skills__skill">Rest APIs</div>
+              <div class="skills__skill">AWS</div>
+              <div class="skills__skill">Postman</div>
+              <div class="skills__skill">Linux</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="projects" class="projects sec-pad">
+      <div class="main-container">
+        <h2 class="heading heading-sec heading-sec__mb-bg">
+          <span class="heading-sec__main">Projects</span>
+          <span class="heading-sec__sub">
+            Here you will find a few of my personal projects that I am most proud of
+          </span>
+        </h2>
+
+        <div class="projects__content">
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/chat.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">AI Chatbot</h3>
+              <p class="projects__row-content-desc">
+                Developed an AI chatbot using Python, incorporating neural networks and natural language processing techniques. By leveraging neural networks, specifically deep learning models, the chatbot is capable of learning patterns and relationships in input data, enabling it to understand user queries and generate human-like responses. Integrating natural language processing techniques allows the chatbot to effectively process and analyze natural language input, enhancing its ability to comprehend user intent and provide meaningful and contextually relevant answers.
+              </p>
+              <a
+                href="./project-1.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >View Project!</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/social.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Dynamic Social Media Website</h3>
+              <p class="projects__row-content-desc">
+                Created a dynamic social media website adhering to RESTful principles. Built the front-end using HTML and CSS, while leveraging JavaScript and Node.js with the Express framework for the back-end development. Utilized Postgres as the database system.
+              </p>
+              <a
+                href="./project-2.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >View Project!</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/weather.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Real-time Weather App</h3>
+              <p class="projects__row-content-desc">
+                Developed a weather data fetching program, utilizing API calls to fetch real-time weather data from OpenWeatherMap. Implemented location-based forecasts, an intuitive gui using Tkinter, and seamless data retrieval.
+              </p>
+              <a
+                href="./project-3.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >View Project!</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+ 
   
-  <header>
-    <h1>Max Kempler</h1>
-    <h2>Junior at Marist College | Student Web Programmer | Software Development 2 TA</h2>
-  </header>
-
-  <main>
-    <p>Welcome to my personal website. Here, you can learn more about me, the projects I've worked on, and the skills I have gained from my courses and work experience. Feel free to look around and contact me if you have any questions or opportunities!</p>
-
-    <section id="projects">
-      <h2>Personal Projects</h2>
-      <div class="project">
-        <h3><a href="/projects">AI Chatbot</a></h3>
-      </div>
-      <div class="project">
-        <h3><a href="/projects">Dynamic Social Media Website</a></h3>
-      </div>
-      <div class="project">
-        <h3><a href="/projects">Real-time Weather App</a></h3>
+        </h2>
+        <section id="contact" class="contact sec-pad dynamicBg">
+          <div class="main-container">
+              <h2 class="heading heading-sec heading-sec__mb-med">
+                  <span class="heading-sec__main heading-sec__main--lt">Contact</span>
+                  <span class="heading-sec__sub heading-sec__sub--lt">
+                      Feel free to contact me by submitting the form below and I will get back to you as soon as possible.
+                  </span>
+              </h2>
+              <div class="contact__form-container">
+            
+                  <form action="/send" method="POST" class="contact__form"> 
+                      <div class="contact__form-field">
+                          <label class="contact__form-label" for="name">Name</label>
+                          <input
+                              required
+                              placeholder="Enter Your Name"
+                              type="text"
+                              class="contact__form-input"
+                              name="name"
+                              id="name"
+                          />
+                      </div>
+                      <div class="contact__form-field">
+                          <label class="contact__form-label" for="email">Email</label>
+                          <input
+                              required
+                              placeholder="Enter Your Email"
+                              type="email" 
+                              class="contact__form-input"
+                              name="email"
+                              id="email"
+                          />
+                      </div>
+                      <div class="contact__form-field">
+                          <label class="contact__form-label" for="message">Message</label>
+                          <textarea
+                              required
+                              cols="30"
+                              rows="10"
+                              class="contact__form-input"
+                              placeholder="Enter Your Message"
+                              name="message"
+                              id="message"
+                          ></textarea>
+                      </div>
+                      <button type="submit" class="btn btn--theme contact__btn">
+                          Submit
+                      </button>
+                  </form>
+              </div>
+          </div>
+      </section>
+      
       </div>
     </section>
+    <footer class="main-footer">
+      <div class="main-container">
+        <div class="main-footer__upper">
+          <div class="main-footer__row main-footer__row-1">
+            <h2 class="heading heading-sm main-footer__heading-sm">
+              
+          </div>
+          <div class="main-footer__row main-footer__row-2">
+            <h4 class="heading heading-sm text-lt">Max Kempler</h4>
+            <p class="main-footer__short-desc">
+              Software Engineer Intern at the Center for Internet Security  
+            </p>
+          </div>
+        </div>
 
-    <section id="skills">
-      <h2>Skills</h2>
-      <ul>
-        <li>Python</li>
-        <li>Java</li>
-        <li>JavaScript</li>
-        <li>PHP</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Git</li>
-        <li>AWS</li>
-        <li>Drupal</li>
-        <li>Docker</li>
-        <li>Linux</li>
-        <li>SQL</li>
-        <li>Node.js</li>
-        <li>RESTful APIs</li>
-        <li>Postman</li>
-        <li>Express</li>
-        <li>Excel</li>
-        <li>PowerPoint</li>
-      </ul>
-    </section>
-  </main>
-</body>
+
+      </div>
+    </footer>
+
+    <script src="./index.js"></script>
+  </body>
 </html>
