--- a/views/index.ejs
+++ b/views/index.ejs
@@ -184,7 +184,7 @@
                 Developed an AI chatbot using Python, incorporating neural networks and natural language processing techniques. By leveraging neural networks, specifically deep learning models, the chatbot is capable of learning patterns and relationships in input data, enabling it to understand user queries and generate human-like responses. Integrating natural language processing techniques allows the chatbot to effectively process and analyze natural language input, enhancing its ability to comprehend user intent and provide meaningful and contextually relevant answers.
               </p>
               <a
-                href="./project-1.html"
+                href="https://github.com/MKempler/AIChatbot"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >View Project!</a
@@ -206,7 +206,7 @@
                 Created a dynamic social media website adhering to RESTful principles. Built the front-end using HTML and CSS, while leveraging JavaScript and Node.js with the Express framework for the back-end development. Utilized Postgres as the database system.
               </p>
               <a
-                href="./project-2.html"
+                href="https://github.com/MKempler/SocialMediaWebsite"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >View Project!</a
@@ -228,7 +228,7 @@
                 Developed a weather data fetching program, utilizing API calls to fetch real-time weather data from OpenWeatherMap. Implemented location-based forecasts, an intuitive gui using Tkinter, and seamless data retrieval.
               </p>
               <a
-                href="./project-3.html"
+                href="https://github.com/MKempler/Weather-Data-Fetcher"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >View Project!</a
