--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,60 +18,52 @@
   <body>
     <header class="header">
       <div class="header__content">
-        <div class="header__logo-container">
-          <div class="header__logo-img-cont">
-            <img
-              src="./assets/max-kempler.png"
-                  
-              class="header__logo-img"
-              
-
-              
-            />
-            
-          </div>
-          <span class="header__logo-sub">Max Kempler</span>
-        </div>
-        <div class="header__main">
-          <ul class="header__links">
-            <li class="header__link-wrapper">
-              <a href="/" class="header__link"> Home </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="./#about" class="header__link">About </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="./#projects" class="header__link">
-                Projects
+          <div class="header__logo-container">
+              <!-- Anchor tag wrapping the logo image and name -->
+              <a href="/" class="header__logo-link">
+                  <div class="header__logo-img-cont">
+                      <img src="./assets/max-kempler.png" class="header__logo-img"/>
+                  </div>
+                  <span class="header__logo-sub">Max Kempler</span>
               </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="./#contact" class="header__link"> Contact </a>
-            </li>
-          </ul>
-        
-      <div class="header__sm-menu">
-        <div class="header__sm-menu-content">
-          <ul class="header__sm-menu-links">
-            <li class="header__sm-menu-link">
-              <a href="./index.html"> Home </a>
-            </li>
-
-            <li class="header__sm-menu-link">
-              <a href="./index.html#about"> About </a>
-            </li>
-
-            <li class="header__sm-menu-link">
-              <a href="./index.html#projects"> Projects </a>
-            </li>
-
-            <li class="header__sm-menu-link">
-              <a href="./index.html#contact"> Contact </a>
-            </li>
-          </ul>
-        </div>
+          </div>
+          <div class="header__main">
+              <ul class="header__links">
+                  <li class="header__link-wrapper">
+                      <a href="/" class="header__link">Home</a>
+                  </li>
+                  <li class="header__link-wrapper">
+                      <a href="./#about" class="header__link">About</a>
+                  </li>
+                  <li class="header__link-wrapper">
+                      <a href="./#projects" class="header__link">Projects</a>
+                  </li>
+                  <li class="header__link-wrapper">
+                      <a href="./#contact" class="header__link">Contact</a>
+                  </li>
+              </ul>
+          </div>
+          <div class="header__sm-menu">
+              <div class="header__sm-menu-content">
+                  <ul class="header__sm-menu-links">
+                      <li class="header__sm-menu-link">
+                          <a href="./index.html">Home</a>
+                      </li>
+                      <li class="header__sm-menu-link">
+                          <a href="./index.html#about">About</a>
+                      </li>
+                      <li class="header__sm-menu-link">
+                          <a href="./index.html#projects">Projects</a>
+                      </li>
+                      <li class="header__sm-menu-link">
+                          <a href="./index.html#contact">Contact</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
       </div>
-    </header>
+  </header>
+  
     <section class="home-hero">
       <div class="home-hero__content">
         <h1 class="heading-primary">Hey, My name is Max Kempler</h1>
